--- a/static/bower.json
+++ b/static/bower.json
@@ -40,6 +40,7 @@
     "globalize": "^1.1.1",
     "angular-globalize-wrapper": "^1.0.0",
     "jquery-validation-globalize": "^1.0.0",
-    "font-awesome": "^4.6.3"
+    "font-awesome": "^4.6.3",
+    "ngInfiniteScroll": "^1.3.0"
   }
 }
