--- a/db/dbconf.yml
+++ b/db/dbconf.yml
@@ -1,6 +1,6 @@
 production:
     driver: postgres
-    open: user=postgres dbname=myerp-crm sslmode=disable
+    open: user=postgres dbname=myerp port=5432 sslmode=disable
 development:
     driver: postgres
-    open: user=postgres dbname=myerp-crm sslmode=disable
+    open: user=postgres dbname=myerp port=5432 sslmode=disable
