--- a/static/bower.json
+++ b/static/bower.json
@@ -25,7 +25,6 @@
     "angular-messages": "1.4.10",
     "angular-ui-router": "^0.2.18",
     "angular-websocket": "^1.1.0",
-    "bootstrap": "^3.3.6",
     "satellizer": "^0.14.0",
     "angular-block-ui": "^0.2.2",
     "ng-load": "^1.0.2",
@@ -41,6 +40,7 @@
     "angular-globalize-wrapper": "^1.0.0",
     "jquery-validation-globalize": "^1.0.0",
     "font-awesome": "^4.6.3",
-    "ngInfiniteScroll": "^1.3.0"
+    "ngInfiniteScroll": "^1.3.0",
+    "bootstrap": "^3.3.7"
   }
 }
