--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,6 +9,15 @@
 			"program": "${workspaceRoot}",
 			"env": {},
 			"args": []
+		},
+		{
+			"name": "Test Models",
+			"type": "go",
+			"request": "launch",
+			"mode": "test",
+			"program": "${workspaceRoot}\\models",
+			"env": {},
+			"args": []
 		}
 	]
 }
