--- a/static/bower.json
+++ b/static/bower.json
@@ -44,6 +44,7 @@
     "bootstrap": "^3.3.7",
     "jquery-ui": "^1.12.1",
     "angular-bootstrap-switch": "^0.5.1",
-    "awesome-bootstrap-checkbox": "^0.3.7"
+    "awesome-bootstrap-checkbox": "^0.3.7",
+    "angular-confirm-modal": "^1.2.6"
   }
 }
